# qpragma-hhl

./: CMakeLists.txt  README.md  hybrid_hhl.cpp
include/qpragma/: hhl.hpp
include/qpragma/hhl/: core.hpp  observables.hpp  observables.ipp  simulation.hpp  stateprep.hpp  stateprep.ipp  utils.hpp  utils.ipp
old/: hamiltonian_sim.cpp
src/: hamiltonian_sim.cpp  hybrid_hhl.cpp  main.cpp  observable.cpp  state_prep.cpp  utils.cpp
tests/: CMakeLists.txt  main.cpp  test_hhl.cpp  test_stateprep.cpp  test_utils.cpp
